<?xml version="1.0"?>
<package format="2">
  <name>dht11</name>
  <version>0.0.0</version>
  <description>The dht11_sample package</description>

  <maintainer 
	email="burak_can_fzl@hotmail.com">Burak Can FAZLA
  </maintainer>

  <maintainer 
	email="m.yildiz026@gmail.com">Mutlu YILDIZ
  </maintainer>

  <maintainer 
	email="s.gokberkdagli@gmail.com">Süleyman Gökberk DAĞLI
  </maintainer>

  <maintainer 
	email="zekiaynal@gmail.com">Zeki AYNAL
  </maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <export>


  </export>
</package>
