<?xml version="1.0"?>
<package format="2">
  <name>sonar_sub</name>
  <version>0.0.0</version>
  <description>The sonar_sub package</description>

  <maintainer 
	email="burak_can_fzl@hotmail.com">Burak Can FAZLA
  </maintainer>

  <maintainer 
	email="m.yildiz026@gmail.com">Mutlu YILDIZ
  </maintainer>

  <maintainer 
	email="s.gokberkdagli@gmail.com">Süleyman Gökberk DAĞLI
  </maintainer>

  <maintainer 
	email="zekiaynal@gmail.com">Zeki AYNAL
  </maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>

  </export>
</package>
